--- a/.travis.yml
+++ b/.travis.yml
@@ -14,15 +14,19 @@ addons:
   - apt:
     packages:
       - libssh2-1-dev
+      - cmake
+
 
 os:
   - linux
 
 env:
+  LIBGIT2=~/libgit2/_install/ LD_LIBRARY_PATH=~/libgit2/_install/lib
   matrix:
     - ELM_VERSION=0.18.0 TARGET_NODE_VERSION=node
 
 before_install:
+  - "./scripts/travisbuild.sh"
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - | # epic build time improvement - see https://github.com/elm-lang/elm-compiler/issues/1473#issuecomment-245704142
     if [ ! -d sysconfcpus/bin ];
