--- a/.travis.yml
+++ b/.travis.yml
@@ -28,7 +28,7 @@ env:
     - ELM_VERSION=0.18.0 TARGET_NODE_VERSION=node
 
 before_install:
-  - "./scripts/travisbuild.sh"
+  - "./test/scripts/travisbuild.sh"
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - | # epic build time improvement - see https://github.com/elm-lang/elm-compiler/issues/1473#issuecomment-245704142
     if [ ! -d sysconfcpus/bin ];
