--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ install:
   - mv $(npm config get prefix)/bin/elm-make $(npm config get prefix)/bin/elm-make-old
   - printf '%s\n\n' '#!/bin/bash' 'echo "Running elm-make with sysconfcpus -n 2"' '$TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 elm-make-old "$@"' > $(npm config get prefix)/bin/elm-make
   - chmod +x $(npm config get prefix)/bin/elm-make
-  - cd apps/gitwerk_web/assets/
+  - cd assets/
   - travis_retry elm-package install --yes
   - cd tests
   - travis_retry elm-package install --yes
