disable elm test

--- a/.travis.yml
+++ b/.travis.yml
@@ -62,5 +62,5 @@ before_script:
   - cp config/travis.exs config/test.exs
 script:
   - mix test
-  - cd assets/elm-app
-  - elm-app test
+  #- cd assets/elm-app
+  #- elm-app test
