--- a/web/package.json
+++ b/web/package.json
@@ -27,13 +27,19 @@
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
     "ember-cli-qunit": "^4.0.0",
+    "ember-cli-sass": "^5.4.0",
     "ember-cli-shims": "^1.1.0",
     "ember-cli-sri": "^2.1.0",
     "ember-cli-uglify": "^2.0.0",
+    "ember-cp-validations": "^3.5.0",
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-material-design-icons-shim": "^0.1.11",
+    "ember-materialize-shim": "^0.4.2",
     "ember-resolver": "^4.0.0",
+    "ember-route-action-helper": "^2.0.6",
+    "ember-simple-auth": "^1.4.0",
     "ember-source": "~2.16.0",
     "ember-welcome-page": "^3.0.0",
     "loader.js": "^4.2.3"
