--- a/web/package.json
+++ b/web/package.json
@@ -37,6 +37,7 @@
     "ember-load-initializers": "^1.0.0",
     "ember-material-design-icons-shim": "^0.1.11",
     "ember-materialize-shim": "^0.4.2",
+    "ember-network": "^0.3.1",
     "ember-resolver": "^4.0.0",
     "ember-route-action-helper": "^2.0.6",
     "ember-simple-auth": "^1.4.0",
