--- a/web/package.json
+++ b/web/package.json
@@ -24,6 +24,7 @@
     "ember-cli-dependency-checker": "^2.0.0",
     "ember-cli-eslint": "^4.0.0",
     "ember-cli-flash": "^1.5.0",
+    "ember-cli-gravatar": "^3.9.0",
     "ember-cli-htmlbars": "^2.0.1",
     "ember-cli-htmlbars-inline-precompile": "^1.0.0",
     "ember-cli-inject-live-reload": "^1.4.1",
@@ -36,15 +37,22 @@
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
     "ember-load-initializers": "^1.0.0",
+    "ember-lodash-shim": "^2.0.5",
     "ember-material-design-icons-shim": "^0.1.11",
     "ember-materialize-shim": "^0.4.2",
     "ember-network": "^0.3.1",
+    "ember-redux": "^3.0.0",
+    "ember-redux-shim": "^2.5.0",
+    "ember-redux-thunk-shim": "^2.4.0",
     "ember-resolver": "^4.0.0",
     "ember-route-action-helper": "^2.0.6",
     "ember-simple-auth": "^1.4.0",
     "ember-source": "~2.16.0",
+    "ember-symbol-observable": "^1.0.0",
     "ember-welcome-page": "^3.0.0",
-    "loader.js": "^4.2.3"
+    "loader.js": "^4.2.3",
+    "redux": "^3.7.2",
+    "redux-thunk": "^2.2.0"
   },
   "engines": {
     "node": "^4.5 || 6.* || >= 7.*"
