--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,6 @@ otp_release: 20.1
 
 cache:
   directories:
-    - tests/elm-stuff/build-artifacts
     - sysconfcpus
     - deps
 
@@ -25,35 +24,15 @@ env:
   global:
     - LIBGIT2=~/libgit2/_install/
     - LD_LIBRARY_PATH=~/libgit2/_install/lib
-  matrix:
-    - ELM_VERSION=0.18.0 TARGET_NODE_VERSION=node
 
 before_install:
   - "./test/scripts/travisbuild.sh"
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
-  - | # epic build time improvement - see https://github.com/elm-lang/elm-compiler/issues/1473#issuecomment-245704142
-    if [ ! -d sysconfcpus/bin ];
-    then
-      git clone https://github.com/obmarg/libsysconfcpus.git;
-      cd libsysconfcpus;
-      ./configure --prefix=$TRAVIS_BUILD_DIR/sysconfcpus;
-      make && make install;
-      cd ..;
-    fi
+
 install:
-  - nvm install $TARGET_NODE_VERSION
-  - nvm use $TARGET_NODE_VERSION
-  - node --version
-  - npm --version
-  - npm install -g elm-use elm-test@0.18.3
-  - npm install create-elm-app -g
-  - elm-use $ELM_VERSION
-  - mv $(npm config get prefix)/bin/elm-make $(npm config get prefix)/bin/elm-make-old
-  - printf '%s\n\n' '#!/bin/bash' 'echo "Running elm-make with sysconfcpus -n 2"' '$TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 elm-make-old "$@"' > $(npm config get prefix)/bin/elm-make
-  - chmod +x $(npm config get prefix)/bin/elm-make
-  - cd assets/elm-app
-  - travis_retry elm-package install --yes
-  - cd ../../
+  - cd web
+  - travis_retry npm install
+  - cd ../
   - mix local.hex --force
   - mix local.rebar --force
   - mix deps.get
@@ -62,5 +41,5 @@ before_script:
   - cp config/travis.exs config/test.exs
 script:
   - mix test
-  #- cd assets/elm-app
-  #- elm-app test
+  - cd assets/elm-app
+  - ember test
