--- a/.travis.yml
+++ b/.travis.yml
@@ -33,7 +33,6 @@ before_install:
   - "./test/scripts/travisbuild.sh"
   - echo -e "Host github.com\n\tStrictHostKeyChecking no\n" >> ~/.ssh/config
   - npm config set spin false
-  - npm install -g ember-cli
 
 install:
   - cd web
@@ -48,4 +47,4 @@ before_script:
 script:
   - mix test
   - cd web
-  - ember test
+  - ./node_modules/ember-cli/bin/ember test
