load repository from API

--- a/web/package.json
+++ b/web/package.json
@@ -36,6 +36,7 @@
     "ember-cp-validations": "^3.5.0",
     "ember-data": "~2.16.2",
     "ember-export-application-global": "^2.0.0",
+    "ember-fetch": "^3.4.3",
     "ember-load-initializers": "^1.0.0",
     "ember-lodash-shim": "^2.0.5",
     "ember-material-design-icons-shim": "^0.1.11",
